welcome.lessons.welcome.array.notriples.NoTriples.scala.error
noTriples:-6: error: Missing closing brace `}' assumed here
try {
^noTriples:1: error: expected class or object definition
def noTriples(nums:Array[Int]): Boolean = {
^